<resources>
    <string name="app_name">DPES2</string>
    <string name="shopping">Compras</string>
    <string name="budget">Orçamento</string>
    <string name="calculate">Calcular</string>
    <string name="item">Item</string>
    <string name="value">Valor</string>
    <string name="zero_value">R$ 0.00</string>
    <string name="taxes">Impostos:</string>
    <string name="icms">ICMS:</string>
    <string name="iss">ISS:</string>
    <string name="ikcp">IKCP:</string>
    <string name="icpp">ICPP:</string>
    <string name="final_value">Valor Final:</string>
    <string name="discount">Desconto:</string>
    <string name="invoice">Nota Fiscal</string>
    <string name="add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="company_name">Razão Social</string>
    <string name="cnpj">CNPJ</string>
    <string name="comments">Observações</string>
    <string name="name">Nome</string>
    <string name="invoice_company_name">RAZÃO SOCIAL:</string>
    <string name="invoice_cnpj">CNPJ:</string>
    <string name="invoice_comments">OBSEVAÇÕES:</string>
    <string name="invoice_total">TOTAL:</string>
</resources>
